--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <p>Get your greeting <a href="/greeting">here</a></p>
+  <p>Appointments <a href="/appointments">here</a></p>
 </body>
 </html>
