--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Getting Started: Serving Web Content</title>
+  <title>NakedApp Index</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-  <p>Get your greeting <a href="/greeting">here</a></p>
-  <p>Appointments <a href="/appointments">here</a></p>
+  <p>Appointments: <a href="/appointments">Click Here</a></p>
 </body>
 </html>
